Fixed side-nav edition icon alignments

--- a/_scss/partials/_edition-marker.scss
+++ b/_scss/partials/_edition-marker.scss
@@ -114,6 +114,8 @@ strong.b2b-only {
 .spectrum-SideNav-itemLink.ee-only,
 .spectrum-SideNav-itemLink.ce-only,
 .spectrum-SideNav-itemLink.b2b-only {
-  padding-right: 28px;
+
+  display: flex;
+  justify-content: space-between;
 
 }
